[package]
name = "rust-client"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
openssl = "0.10"
postgres = { version = "0.19.10" }
postgres-openssl = { version = "0.5.1" }
