[package]
name = "test-server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgwire = { path = "../../", features = ["server-api-scram-ring"] }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
