[package]
name = "test-server"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pgwire = { path = "../../" }
async-trait = "0.1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-rustls = { version = "0.26.2", default-features = false, features = ["logging", "tls12"]}
rustls-pemfile = "2.0"
rustls-pki-types = "1.0"
